# VSG

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/vsg/: __init__.py  core.py  networks.py  objective.py  state.py
tests/: conftest.py  test__core.py  test__networks.py  test__objective.py  test__state.py
